---
source: book/tests/snapshot.rs
expression: "from_text \"\"\"\na,b,c\n1,2,3\n4,5,6\n\"\"\"\nderive [\n    d = b + c,\n    answer = 20 * 2 + 2,\n]\n"
input_file: book/tests/prql/transforms/from_text-0.prql
---
WITH table_1 AS (
  SELECT
    '1' AS a,
    '2' AS b,
    '3' AS c
  UNION
  ALL
  SELECT
    '4' AS a,
    '5' AS b,
    '6' AS c
)
SELECT
  a,
  b,
  c,
  b + c AS d,
  42 AS answer
FROM
  table_1 AS table_0

